first website up

--- a/index.html
+++ b/index.html
@@ -1,4 +1,167 @@
-Hello World
+<!DOCTYPE HTML>
+<!--
+	Spectral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Steven Lin | Portfolio</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body class="landing">
 
-Link to project site
-<a href="http://linshiu.github.io/testwebsite"> Link </a>
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
+
+				<!-- Header -->
+					<header id="header" class="alt">
+						<h1><a href="index.html">Steven Lin</a></h1>
+						<nav id="nav">
+							<ul>
+								<li class="special">
+									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<div id="menu">
+										<ul>
+											<li><a href="index.html">Home</a></li>
+											<li><a href="#two">Projects</a></li>
+                                            <li><a href="https://github.com/linshiu/courses">Courses</a></li>
+											<li><a href="https://github.com/linshiu/scripts">Scripts</a></li>
+                                            <li><a href="#cta">About Me</a></li>
+										</ul>
+									</div>
+								</li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<h2>Steven Lin</h2>
+                            <p>Portfolio</p>
+						</div>
+						<a href="#one" class="more scrolly">Learn More</a>
+					</section>
+
+				<!-- One -->
+					<section id="one" class="wrapper style1 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Data Science<br />
+								Projects</h2>
+								<p>Collection of various projects related to data science, big data analytics, machine learning, predictive modeling and data mining</p>
+							</header>
+				
+						</div>
+					</section>
+
+				<!-- Two -->
+					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image">
+                                <a href="https://docs.google.com/viewer?url=https://github.com/linshiu/text_mining/raw/master/msia/hw4/hw4.pdf">
+                                <img src="images/inside_out.jpg" alt="" /> </a></div>
+                            <div class="content">
+								<h2>Inside Out Movie Script:<br />
+								A Text Analytics Study</h2>
+								<p>Several machine learning and text analytics methods were used to analyze the movie script. Some methods included webscraping, Name Entity Recognition, sentiment analysis, LDA and hierarchical clustering. </p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image">
+                                <a href="https://docs.google.com/viewer?url=https://github.com/linshiu/projects/raw/master/kaggle_dont_get_kicked/Predictive%20Final%20Project%202.pdf">
+                                <img src="images/car_auction.jpg" alt="" /> </a></div>
+                            <div class="content">
+								<h2>Kaggle:<br />
+								Don't Get Kicked!</h2>
+								<p>Built various supervised learning models to identify relevant car attributes and predict bad buys by dealers at car auctions. Models tested included logistic regression, decision tree, neural network, random forest and gradient tree boosting.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image">
+                                <a href="https://public.tableau.com/profile/steven.lin#!/vizhome/beer_2/Story1">
+                                <img src="images/beer.jpg" alt="" /> </a></div>
+                            <div class="content">
+								<h2>Visualizing<br />
+								Beer Advocate Data</h2>
+								<p>An exploratory data analysis through several visualization techniques was done to gain insights on beer reviews that were webscraped from Beer Advocate. </p>
+							</div>
+						</section>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style3 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Other Projects</h2>
+								<p>Technology Stack<br />
+								Python | R | SQL | Spark | Hadoop | Java | D3.js | Javascript | HTML | GitHub</p>
+							</header>
+							<ul class="features">
+                                
+                                <li class="icon fa-code" >
+                                    <a href="https://github.com/linshiu/projects/tree/master/catalog_sales"><h3>Catalog Sales</h3></a>
+									<p>Data Mining for targeting customers</p>
+								</li>
+                                <li class="icon fa-code" >
+                                    <a href="https://github.com/linshiu/projects/tree/master/electronic_nose"><h3>Electronic Nose</h3></a>
+									<p>Implemented supervised machine learning methods using colorimetric sensor array data to classify toxic compounds.</p>
+								</li>
+								<li class="icon fa-code" >
+                                    <a href="https://github.com/linshiu/projects/tree/master/american_time_use_survey"><h3>American Time Use Survey</h3></a>
+									<p>Exploratory analysis of how Americans spend their time</p>
+								</li>
+								<li class="icon fa-code" >
+                                    <a href="https://github.com/linshiu/projects/tree/master/bowling_simulation"><h3>Bowling Simulation</h3></a>
+									<p>Discrete-event simulation model to analyze the operation of a bowling center</p>
+								</li>
+
+							</ul>
+						</div>
+					</section>
+
+				<!-- CTA -->
+					<section id="cta" class="wrapper style4">
+						<div class="inner">
+							<header>
+								<h2>About Me</h2>
+								<p>I am a Data Scientist and Engineer with experience in startups, Fortune 500 companies and family-owned businesses in diverse industries, ranging from airline, entertainment and manufacturing to internet and technology.<br /><br />
+                                I studied Engineering, Statistics and Analytics at the University of Illinois at Urbana-Champaign and Northwestern University. </p>
+							</header>
+							<ul class="actions vertical">
+								<li><a href="https://www.linkedin.com/in/linshiu" class="button fit">Learn More</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="icons">
+                            <li><a href="https://www.linkedin.com/in/linshiu" class="icon fa-linkedin-square"><span class="label">Github</span></a></li>   
+							<li><a href="https://github.com/linshiu" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Steven Lin</li><li>Design: HTML5 UP </li>
+						</ul>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
