--- a/index.html
+++ b/index.html
@@ -176,8 +176,9 @@
 						<div class="inner">
 							<header>
 								<h2>About Me</h2>
-								<p>I am a Data Scientist and Engineer with experience in startups, Fortune 500 companies and family-owned businesses in diverse industries, ranging from airline, entertainment and manufacturing to internet and technology.<br /><br />
-                                I studied Engineering, Statistics and Analytics at the University of Illinois at Urbana-Champaign and Northwestern University. </p>
+								<p>I am a Data Scientist and Engineer with a passion for using science and technology to solve challenging problems that have an impact on people's lives. <br /><br /> 
+								I have experience developing data science solutions in startups, Fortune 500 companies and family-owned businesses in diverse industries, ranging from airline, entertainment and manufacturing to internet and technology. Some projects include predicting hotel occupancy, clustering customers based on app usage behavior, building customer retention models, analyzing traffic data using sensors, modeling loyalty rewards redemption and text mining twitter data and movie scripts. <br /><br />
+                                I studied Engineering, Statistics and Analytics at the University of Illinois at Urbana-Champaign and Northwestern University. In my free time I enjoy traveling, learning new technologies and playing sports.</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="https://www.linkedin.com/in/linshiu" class="button fit">Learn More</a></li>
