--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<span class="image">
 										<img src="images/inside_out.jpg" alt="" />
 									</span>
-									<a href="https://docs.google.com/viewer?url=https://github.com/linshiu/text_mining/raw/master/msia/hw4/hw4.pdf">
+									<a href="inside-out-text-mining">
 										<h2>Inside Out</h2>
 										<div class="content">
 											<p>Several machine learning and text analytics methods were used to analyze the movie script.</p>
