--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<span class="image">
 										<img src="images/inside_out.jpg" alt="" />
 									</span>
-									<a href="inside-out-text-mining">
+									<a href="/inside-out-text-mining"> <!-- this is link to gh-pages repository...can use / or no / -->
 										<h2>Inside Out</h2>
 										<div class="content">
 											<p>Several machine learning and text analytics methods were used to analyze the movie script.</p>
