--- a/courses.html
+++ b/courses.html
@@ -21,18 +21,18 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="/index.html">Steven Lin</a></h1>
+						<h1><a href="index.html">Steven Lin</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="/index.html">Home</a></li>
-                                            <li><a href="/#one">Projects</a></li>
-                                            <li><a href="https://github.com/linshiu/courses">Courses</a></li>
+											<li><a href="index.html">Home</a></li>
+                                            <li><a href="#one">Projects</a></li>
+                                            <li><a href="courses.html">Courses</a></li>
 											<li><a href="https://github.com/linshiu/scripts">Scripts</a></li>
-                                            <li><a href="/#cta">About Me</a></li>
+                                            <li><a href="#cta">About Me</a></li>
 										</ul>
 									</div>
 								</li>
@@ -51,31 +51,31 @@
 
 								<h3>Northwestern University</h3>
                                 <ul>
-                                    <li> <a href="msia_big_data">Big Data</a></li>
-                                    <li> <a href="msia_deep_learning">Deep Learning</a></li>
-                                    <li> <a href="msia_text_analytics">Text Analytics</a></li>
-                                    <li> <a href="msia_data_mining">Data Mining</a></li>
-                                    <li> <a href="msia_predictive_analytics">Predictive Analytics</a></li>
-                                    <li> <a href="msia_statistical_methods">Statistical Methods</a></li>
-                                    <li> <a href="msia_visualization">Visualization</a></li>
-                                    <li> <a href="msia_analytics_competitive_advantage">Analytics for Competitive Advantage</a></li>
+                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_big_data">Big Data</a></li>
+                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_deep_learning">Deep Learning</a></li>
+                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_text_analytics">Text Analytics</a></li>
+                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_data_mining">Data Mining</a></li>
+                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_predictive_analytics">Predictive Analytics</a></li>
+                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_statistical_methods">Statistical Methods</a></li>
+                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_visualization">Visualization</a></li>
+                                    <li> <a href="https://github.com/linshiu/courses/tree/master/msia_analytics_competitive_advantage">Analytics for Competitive Advantage</a></li>
                                 </ul>
 
 								<hr />
 
 								<h3>University of Illinois at Urbana-Champaign</h3>
-                                <li> <a href="uiuc_regression_analysis">Regression Analysis</a></li>
-                                <li> <a href="uiuc_statistical_computing">Statistical Computing</a></li>
+                                <li> <a href="https://github.com/linshiu/courses/tree/master/uiuc_regression_analysis">Regression Analysis</a></li>
+                                <li> <a href="https://github.com/linshiu/courses/tree/master/uiuc_statistical_computing">Statistical Computing</a></li>
 
                                 <hr />
 
                                 <h3>Coursera, edX and Udacity</h3>
-                                <li> <a href="edx_analytics_edge">edx - MIT: Analytics Edge</a></li>
-                                <li> <a href="edx_HTML_CSS_JavaScript">edx - Microsoft: Intro HTML, CSS and JavaScript</a></li>
+                                <li> <a href="https://github.com/linshiu/courses/tree/master/edx_analytics_edge">edx - MIT: Analytics Edge</a></li>
+                                <li> <a href="https://github.com/linshiu/courses/tree/master/edx_HTML_CSS_JavaScript">edx - Microsoft: Intro HTML, CSS and JavaScript</a></li>
                                 <li> <a href="edx_mit_intro_computer_science_and_programming">edx - MIT: Intro to Computer Science and Programming</a></li>
-                                <li> <a href="edx_berkeley_big_data_with_spark">edx - Berkeley: Big Data with Spark</a></li>
-                                <li> <a href="edx_berkeley_scalable_machine_learning">edx - Berkeley: Scalable Machine Learning</a></li>
-                                <li> <a href="udacity_technical_interview">udacity - Technical Interview</a></li>
+                                <li> <a href="https://github.com/linshiu/courses/tree/master/edx_berkeley_big_data_with_spark">edx - Berkeley: Big Data with Spark</a></li>
+                                <li> <a href="https://github.com/linshiu/courses/tree/master/edx_berkeley_scalable_machine_learning">edx - Berkeley: Scalable Machine Learning</a></li>
+                                <li> <a href="https://github.com/linshiu/courses/tree/master/udacity_technical_interview">udacity - Technical Interview</a></li>
 							</div>
 						</section>
 					</article>
