--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="#one">Projects</a></li>
-                                            <li><a href="https://github.com/linshiu/courses">Courses</a></li>
+                                            <li><a href="courses.html">Courses</a></li>
 											<li><a href="https://github.com/linshiu/scripts">Scripts</a></li>
                                             <li><a href="#cta">About Me</a></li>
 										</ul>
