--- a/courses.html
+++ b/courses.html
@@ -29,10 +29,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-                                            <li><a href="#one">Projects</a></li>
+                                            <li><a href="/#one">Projects</a></li>
                                             <li><a href="courses.html">Courses</a></li>
 											<li><a href="https://github.com/linshiu/scripts">Scripts</a></li>
-                                            <li><a href="#cta">About Me</a></li>
+                                            <li><a href="/#cta">About Me</a></li>
 										</ul>
 									</div>
 								</li>
