--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 								</li>
                                 
                                 <li class="icon fa-code" >
-                                    <a href="https://docs.google.com/viewer?url=https://github.com/linshiu/projects/raw/master/enzyme_decision/GE%20450%20-%20DACorp%20Case%20-%20Lin%2C%20Kim%2C%20Dai%20(FINAL).pdf"><h3>Medical Decision Analysis</h3></a>
+                                    <a href="https://docs.google.com/viewer?url=https://github.com/linshiu/projects/raw/master/medical_decision/Luis%20S%20Lin%20-%20Project.pdf"><h3>Medical Decision Analysis</h3></a>
 									<p>Decision analysis case study of medical diagnosis</p>
 								</li>
                                 
